<resources>
    <string name="app_name">Ishida Movil 2.2</string>
    <string name="action_delete_all">Eliminar todo</string>
    <string name="institucion">Ishida &amp; Asociados 2016</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_pass">Constraseña</string>
    <string name="btn_login">ingresar</string>
    <string name="btn_info_login">Ishida Movil Copyright &#169; 2016</string>
    <string name="nav_item_pedidos">Pedido</string>
    <string name="nav_item_ofertas">Oferta</string>
    <string name="nav_item_facturas">Factura</string>
    <string name="nav_item_nota">Nota de Venta</string>
    <string name="nav_item_cobro">Cobro</string>
    <string name="nav_item_visita">Visita</string>
    <string name="nav_item_trans_bodega">Trans. Bodega</string>
    <string name="nav_item_trans_ipt">Ing.Pro.Term</string>
    <string name="nav_item_trans_shop">Carrito de Compras</string>
    <string name="nav_item_pago">Pago</string>
    <string name="tittle_estado_cuenta">Estado de Cuenta</string>
    <string name="nav_sub_menu_sinc">Sincronización Información</string>
    <string name="nav_sub_menu_sinc_item1">Sincronizar</string>
    <string name="nav_sub_menu_report">Reportes</string>
    <string name="nav_sub_menu_report_item6">Clientes por Sector</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_transacciones">Transacciones</string>
    <string name="pref_print_pedido">Pedido</string>
    <string name="pref_print_oferta">Oferta</string>
    <string name="pref_print_factura">Factura</string>
    <string name="pref_print_nota">Nota de Venta</string>
    <string name="pref_print_cobro">Cobro</string>
    <string name="pref_print_transferencia">Transferencia de Bodega</string>
    <string name="pref_print_ipt">Ingreso de Producto Terminado</string>
    <string name="pref_print_shop">Carrito de Compras</string>
    <string name="pref_print_visita">Visita</string>
    <string name="pref_print_pago">Pago</string>
    <string name="pref_header_etiquetas">Etiquetas</string>
    <string name="pref_header_menu">Menú Principal</string>
    <string name="pref_header_usuarios">Usuarios</string>
    <string name="pref_header_servicios">Servicios</string>
    <string name="pref_titulo_servicio_test">Test</string>
    <string name="pref_titulo_servicio_provincia">Provincias</string>
    <string name="pref_titulo_servicio_canton">Cantones</string>
    <string name="pref_titulo_servicio_parroquia">Parroquias</string>
    <string name="pref_titulo_servicio_bodegas">Bodegas</string>
    <string name="pref_titulo_servicio_bancos">Bancos</string>
    <string name="pref_titulo_servicio_formas">Formas de Cobro</string>
    <string name="pref_titulo_servicio_gnopcion">GNOpcion</string>
    <string name="pref_titulo_servicio_empresas">Empresas</string>
    <string name="pref_titulo_servicio_gntrans">GNTrans</string>
    <string name="pref_titulo_servicio_grupos">Grupos</string>
    <string name="pref_titulo_servicio_permisos">Permisos</string>
    <string name="pref_titulo_servicio_perxtran">Permisos x Trans</string>
    <string name="pref_titulo_servicio_usuarios">Usuarios</string>
    <string name="pref_titulo_servicio_vendedores">Vendedores</string>
    <string name="pref_titulo_servicio_cartera_vendedor">Cartera x Vendedor</string>
    <string name="pref_titulo_servicio_cartera_cobrador">Cartera x Cobrador</string>
    <string name="pref_titulo_servicio_cartera_ruta">Cartera x Rutas</string>
    <string name="pref_titulo_servicio_cheques">Cheques Postfechados</string>
    <string name="pref_titulo_servicio_pcg1">PCGrupo 1</string>
    <string name="pref_titulo_servicio_pcg2">PCGrupo 2</string>
    <string name="pref_titulo_servicio_pcg3">PCGrupo 3</string>
    <string name="pref_titulo_servicio_pcg4">PCGrupo 4</string>
    <string name="pref_titulo_servicio_clientes_vendedor">Clientes x Vendedor</string>
    <string name="pref_titulo_servicio_clientes_cobrador">Clientes x Cobrador</string>
    <string name="pref_titulo_servicio_clientes_all">Todos los Clientes</string>
    <string name="pref_titulo_servicio_descuentos">Descuentos</string>
    <string name="pref_titulo_servicio_existencias">Existencias</string>
    <string name="pref_titulo_servicio_facturas">Facturas</string>
    <string name="pref_titulo_servicio_items_pendientes">Items Pendientes</string>
    <string name="pref_titulo_servicio_ivg1">IVGrupo 1</string>
    <string name="pref_titulo_servicio_ivg2">IVGrupo 2</string>
    <string name="pref_titulo_servicio_ivg3">IVGrupo 3</string>
    <string name="pref_titulo_servicio_ivg4">IVGrupo 4</string>
    <string name="pref_titulo_servicio_ivg5">IVGrupo 5</string>
    <string name="pref_titulo_servicio_ivg6">IVGrupo 6</string>
    <string name="pref_titulo_servicio_productos">Productos</string>
    <string name="pref_titulo_servicio_promociones">Promociones</string>
    <string name="pref_titulo_servicio_transacciones">Transacciones</string>
    <string name="pref_ws_test">/v1/test</string>
    <string name="pref_ws_provincias">/v1/provincia</string>
    <string name="pref_ws_cantones">/v1/canton</string>
    <string name="pref_ws_parroquias">/v1/parroquia</string>
    <string name="pref_ws_bodegas">/v1/bodega</string>
    <string name="pref_ws_bancos">/v1/banco</string>
    <string name="pref_ws_upload_image">/v1/uploadimage/upload</string>
    <string name="pref_ws_formas_cobro">/v1/tsformacobropago</string>
    <string name="pref_ws_gnopcion">/v1/gnopcion/</string>
    <string name="pref_ws_empresas">/v1/empresa</string>
    <string name="pref_ws_gntrans">/v1/gntrans</string>
    <string name="pref_ws_grupos">/v1/grupo</string>
    <string name="pref_ws_permisos">/v1/permiso</string>
    <string name="pref_ws_permisos_trans">/v1/permisotrans</string>
    <string name="pref_ws_usuarios">/v1/usuario</string>
    <string name="pref_ws_vendedores">/v1/vendedor</string>
    <string name="pref_ws_pcg1">/v1/pcgrupo1</string>
    <string name="pref_ws_pcg2">/v1/pcgrupo2</string>
    <string name="pref_ws_pcg3">/v1/pcgrupo3</string>
    <string name="pref_ws_pcg4">/v1/pcgrupo4</string>
    <string name="pref_ws_clientes_vendedor">/v1/clientesvendedor</string>
    <string name="pref_ws_clientes_cobrador">/v1/clientescobrador</string>
    <string name="pref_ws_clientes_all">/v1/clientestodo</string>
    <string name="pref_ws_ivg1">/v1/ivgrupo1</string>
    <string name="pref_ws_ivg2">/v1/ivgrupo2</string>
    <string name="pref_ws_ivg3">/v1/ivgrupo3</string>
    <string name="pref_ws_ivg4">/v1/ivgrupo4</string>
    <string name="pref_ws_ivg5">/v1/ivgrupo5</string>
    <string name="pref_ws_ivg6">/v1/ivgrupo6</string>
    <string name="pref_ws_productos">/v1/productos</string>
    <string name="pref_ws_imagenes">/v1/imagenes</string>
    <string name="pref_ws_items_pendientes">/v1/itempendiente</string>
    <string name="pref_ws_facturas">/v1/factura</string>
    <string name="pref_ws_promociones">/v1/promocion</string>
    <string name="pref_ws_existencias">/v1/existencia</string>
    <string name="pref_ws_descuentos">/v1/descuento</string>
    <string name="pref_ws_cheques">/v1/cheque</string>
    <string name="pref_ws_cartera_vendedor">/v1/carteravendedor</string>
    <string name="pref_ws_cartera_ruta">/v1/carteraruta</string>
    <string name="pref_ws_cartera_cobrador">/v1/carteracobrador</string>
    <string name="pref_ws_transacciones">/v1/transaccion</string>
    <string name="pref_ws_visita">/v1/visita/registrar</string>
    <string name="pref_ws_ubicacion_gps">/v1/updategps/update</string>
    <string name="pref_ws_cierreventas">/v1/cierreventas</string>
    <string name="pref_ws_balance">/v1/balance</string>
    <string name="pref_header_conexion">Conexión</string>
    <string name="pref_header_decimales">Decimales</string>
    <string name="key_act_num_dec_punitario">conf_act_num_dec_punitario</string>
    <string name="key_act_num_dec_ptotal">conf_act_num_dec_ptotal</string>
    <string name="key_conf_filtrar_clientes_sectores">conf_imp_filter_sectores_clientes</string>
    <string name="key_ws_test">ws_test</string>
    <string name="key_ws_provincias">ws_provincias</string>
    <string name="key_ws_cantones">ws_cantones</string>
    <string name="key_ws_parroquias">ws_parroquias</string>
    <string name="key_ws_bodegas">ws_bodegas</string>
    <string name="key_ws_bancos">ws_bancos</string>
    <string name="key_ws_upload_image">ws_upload_image</string>
    <string name="key_ws_formas">ws_formas</string>
    <string name="key_ws_gnopcion">ws_gnopcion</string>
    <string name="key_ws_gntrans">ws_gntrans</string>
    <string name="key_ws_empresas">ws_empresas</string>
    <string name="key_ws_grupos">ws_grupos</string>
    <string name="key_ws_permisos">ws_permisos</string>
    <string name="key_ws_perxtran">ws_perxtran</string>
    <string name="key_ws_usuarios">ws_usuarios</string>
    <string name="key_ws_vendedores">ws_vendedores</string>
    <string name="key_ws_cartera_vendedor">ws_cartera_vendedor</string>
    <string name="key_ws_cartera_ruta">ws_cartera_ruta</string>
    <string name="key_ws_cartera_cobrador">ws_cobrador</string>
    <string name="key_ws_cheques">ws_cheques</string>
    <string name="key_ws_pcg1">ws_pcg1</string>
    <string name="key_ws_pcg2">ws_pcg2</string>
    <string name="key_ws_pcg3">ws_pcg3</string>
    <string name="key_ws_pcg4">ws_pcg4</string>
    <string name="key_ws_clientes_vendedor">ws_clientes_vendedor</string>
    <string name="key_ws_clientes_cobrador">ws_clientes_cobrador</string>
    <string name="key_ws_clientes_all">ws_clientes_all</string>
    <string name="key_ws_descuentos">ws_descuentos</string>
    <string name="key_ws_existencias">ws_existencias</string>
    <string name="key_ws_facturas">ws_facturas</string>
    <string name="key_ws_items_pendientes">ws_items_pendientes</string>
    <string name="key_ws_ivg1">ws_ivg1</string>
    <string name="key_ws_ivg2">ws_ivg2</string>
    <string name="key_ws_ivg3">ws_ivg3</string>
    <string name="key_ws_ivg4">ws_ivg4</string>
    <string name="key_ws_ivg5">ws_ivg5</string>
    <string name="key_ws_ivg6">ws_ivg6</string>
    <string name="key_ws_productos">ws_productos</string>
    <string name="key_ws_imagenes">ws_imagenes</string>
    <string name="key_ws_promociones">ws_promociones</string>
    <string name="key_ws_transacciones">ws_transacciones</string>
    <string name="key_ws_visitas">ws_visitas</string>
    <string name="key_ws_ubicacion_gps">ws_ubicacion_gps</string>
    <string name="key_ws_cierreventas">ws_cierreventas</string>
    <string name="key_ws_balance">ws_balance</string>
    <string name="pref_header_monedas">Formato decimales en transaccion</string>
    <string name="pref_act_num_dec_p_unitario_default">0.00</string>
    <string name="pref_act_num_dec_p_total_default">0.00</string>
    <string name="key_menu_oferta">key_menu_oferta</string>
    <string name="key_menu_pedido">key_menu_pedido</string>
    <string name="key_menu_factura">key_menu_factura</string>
    <string name="key_menu_nota">key_menu_nota</string>
    <string name="key_menu_pago">key_menu_pago</string>
    <string name="key_menu_cobro">key_menu_cobro</string>
    <string name="key_menu_visita">key_menu_visita</string>
    <string name="key_menu_transferencia">key_menu_transferencia</string>
    <string name="key_menu_ipt">key_menu_ipt</string>
    <string name="key_menu_shop">key_menu_shop</string>
    <string name="key_menu_clientes">key_menu_clientes</string>
    <string name="key_menu_productos">key_menu_productos</string>
    <string name="key_menu_opciones">key_menu_opciones</string>
    <string name="key_menu_cartera">key_menu_cartera</string>
    <string name="key_menu_descuentos">key_menu_descuentos</string>
    <string name="key_menu_ppendientes">key_menu_ppendientes</string>
    <string name="key_menu_cventas">key_menu_cventas</string>
    <string name="key_menu_balance">key_menu_balance</string>
</resources>